Symbol table partial