@@ -7,10 +7,8 @@ import pt.up.fe.comp2024.ast.Kind;
 import pt.up.fe.comp2024.ast.TypeUtils;
 import pt.up.fe.specs.util.SpecsCheck;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static pt.up.fe.comp2024.ast.Kind.METHOD_DECL;
 import static pt.up.fe.comp2024.ast.Kind.VAR_DECL;
@@ -32,41 +30,58 @@ public class JmmSymbolTableBuilder {
         return new JmmSymbolTable(className, methods, returnTypes, params, locals);
     }
 
-    private static Map<String, Type> buildReturnTypes(JmmNode classDecl) {
-        // TODO: Simple implementation that needs to be expanded
+private static Map<String, Type> buildReturnTypes(JmmNode classDecl) {
+    Map<String, Type> map = new HashMap<>();
 
-        Map<String, Type> map = new HashMap<>();
+    classDecl.getChildren(METHOD_DECL).forEach(method -> {
+        var returnTypeNode = method.getJmmChild(0); // Adjust child index based on your AST structure
+        String typeName = returnTypeNode.get("type");
+        boolean isArray = returnTypeNode.getOptional("isArray").orElse("false").equals("true");
+        map.put(method.get("name"), new Type(typeName, isArray));
+    });
 
-        classDecl.getChildren(METHOD_DECL).stream()
-                .forEach(method -> map.put(method.get("name"), new Type(TypeUtils.getIntTypeName(), false)));
+    return map;
+}
 
-        return map;
-    }
 
     private static Map<String, List<Symbol>> buildParams(JmmNode classDecl) {
-        // TODO: Simple implementation that needs to be expanded
-
         Map<String, List<Symbol>> map = new HashMap<>();
 
-        var intType = new Type(TypeUtils.getIntTypeName(), false);
+        classDecl.getChildren(METHOD_DECL).forEach(method -> {
+            List<Symbol> paramsList = method.getChildren("Param").stream() // Assuming "Param" is the kind for parameter nodes
+                    .map(paramNode -> {
+                        String typeName = paramNode.get("type");
+                        boolean isArray = paramNode.getOptional("isArray").orElse("false").equals("true");
+                        String paramName = paramNode.get("name");
+                        return new Symbol(new Type(typeName, isArray), paramName);
+                    })
+                    .collect(Collectors.toList());
 
-        classDecl.getChildren(METHOD_DECL).stream()
-                .forEach(method -> map.put(method.get("name"), Arrays.asList(new Symbol(intType, method.getJmmChild(1).get("name")))));
+            map.put(method.get("name"), paramsList);
+        });
 
         return map;
     }
+
 
     private static Map<String, List<Symbol>> buildLocals(JmmNode classDecl) {
-        // TODO: Simple implementation that needs to be expanded
-
         Map<String, List<Symbol>> map = new HashMap<>();
 
-
-        classDecl.getChildren(METHOD_DECL).stream()
-                .forEach(method -> map.put(method.get("name"), getLocalsList(method)));
+        classDecl.getChildren(METHOD_DECL).forEach(method -> {
+            List<Symbol> localsList = new ArrayList<>();
+            var localVars = method.getDescendants(Kind.VAR_DECL);
+            for (JmmNode localVar : localVars) {
+                String varName = localVar.get("name");
+                String typeName = localVar.get("type");
+                boolean isArray = localVar.getOptional("isArray").orElse("false").equals("true");
+                localsList.add(new Symbol(new Type(typeName, isArray), varName));
+            }
+            map.put(method.get("name"), localsList);
+        });
 
         return map;
     }
+
 
     private static List<String> buildMethods(JmmNode classDecl) {
 
@@ -77,13 +92,16 @@ public class JmmSymbolTableBuilder {
 
 
     private static List<Symbol> getLocalsList(JmmNode methodDecl) {
-        // TODO: Simple implementation that needs to be expanded
-
-        var intType = new Type(TypeUtils.getIntTypeName(), false);
-
         return methodDecl.getChildren(VAR_DECL).stream()
-                .map(varDecl -> new Symbol(intType, varDecl.get("name")))
-                .toList();
+                .map(varDecl -> {
+                    String typeName = varDecl.get("type");
+                    boolean isArray = varDecl.getOptional("isArray").orElse("false").equals("true");
+                    Type varType = new Type(typeName, isArray);
+                    String varName = varDecl.get("name");
+                    return new Symbol(varType, varName);
+                })
+                .collect(Collectors.toList());
     }
+
 
 }
